<resources>
	<string name="app_name">RankitLite</string>
	<string name="facebook_app_id">713360028712814</string>
	<string name="lng">Change language</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
    <string name="About">About</string>
    <string name="Terms">Terms</string>
    <string name="dialog_mes">Rate the quality of a service and/or the quality of a product ? This is now possible through RankIt!, do it in privacy and in a single click !</string>
    <string name="ServicesFavorite">Favorite</string>
    <string name="ServicesNew">New</string>
    <string name="ServicesSugestion">Suggestion</string>
    <string name="ServicesAll">All</string>
    <string name="Services_par_secteur">Search By Business sector</string>
    <string name="Services_par_autre">Other Search</string>
    <string name="butt_signin">Sign In</string>
    <string name="butt_signin_new">Explore</string>
    <string name="butt_signup">Sign Up</string>
	<string name="Titlebar1">Sign In</string>
	<string name="Titlebar_condiction">Sign In</string>
	<string name="Welcome1">Welcome to the ranker community</string>
	<string name="User_pseudo">Pseudo</string>
	<string name="User_password">Password</string>
	<string name="Headtext">Log in to your account.</string>
	<string name="forget_password">Forget your password?</string>
	 <string name="st_remember">Keep me signed in</string>
	 <string name="st_chargement">Loading</string>
	 <string name="st_cond_utilisation1">By clicking this button I have read and accepted </string>
	 <string name="st_cond_utilisation2"><a href="http://www.therankit.com"> By clicking this button I have read and accepted the terms and conditions of use of Rankit!™</a></string>
	 <string name="show_dialog">Show Dialog</string>
	<string name="Titlebar2">Sign Up</string>
	<string name="Welcome2">Sign Up and became a Ranker</string>
	<string name="user_repeat_pass">Repeat your password</string>
	<string name="user_email_address">Email address</string>
	<string name="hint_pseudo">Pseudo</string>
	<string name="hint_password">at least 6 characters</string>
	<string name="hint_repeat_pass">repeat your password</string>
	<string name="hint_email">Email address</string>
	<string name="user_show_pass">show password</string>
	<string name="terms_and_cond">Terms and conditions</string>
	<string name="link_certified">By clicking on this button I certified have read and accepted the terms and conditions of Rankit!™ </string>
	<string name="st_profil">Picture</string>
	 <string name="st_nom">Name</string>
    <string name="st_prenom">Surname</string>
    <string name="st_mail">E-mail</string>
    <string name="genrfocus_login">Sorry, this username already exist</string>
	<string name="genre1">Man</string>
    <string name="genre2">Woman</string>
    <string name="st_date">Born on</string>
    <string name="st_button_date">Calender</string>
    <string name="st_telephone">Phone number</string>
    <string name="st_codepostal">Postal Code</string>
    <string name="st_button_enregistrer">Register</string>
    <string name="st_button_Annullation">Cancel</string>
    <string name="st_toast_focus_login">Sorry, this login already exist</string>
    <string name="st_dialog_insert_login_ok">Valid user name</string>
    <string name="st_pwd_repeat">Confirmed password</string>
    <string name="st_toast_error_2Pwd">Password not identical</string>
    <string name="st_dialog_createCompt">Account creation in progress...</string>
     <string name="pictureTitle">Add Photo</string>
    <string name="pictureChoice1">Take photo</string>
    <string name="pictureChoice2">Choose from gallery</string>
    <string name="pictureChoice3">Cancel</string>
    <string name="valideLogin">Validated !</string>
    <string name="propositionLogin">is already used. Please change!</string>
     <string name="infopropositionLogin">Please choose another username!</string>
    <string name="st_error"></string>
    <string name="st_toast_error">Please fill in all fields</string>
    <string name="st_toast_error_connection">Unable to connect. Check your internet connection! </string>
    <string name="st_toast_error_authentification">Invalid login or password !</string>
<string name="st_connection_failled">No Internet Connection</string>
    <string name="st_dialog_prosition_login">Proposition of user name</string>
    <string name="st_dialog_select_login">Please select one user name</string>
	<string name="Hello">Hello, </string>
	<string name="Location">I\'m here :</string>
	<string name="Friends">  Co-rankers</string>
	<string name="Product">Product</string>
	<string name="Service">Service</string>
	<string name="Butt_invite">Add friends</string>
	<string name="Butt_pick">Pick the best</string>
	<string name="info_quit">Are you sure you want to exit the application?</string>
	<string name="info_quit_noteS">Exit without rank the criteria listed below?</string>
	<string name="info_oui">Yes</string>
	<string name="info_non">No</string>
	<string-array name="country">
<item>Select a country</item>
<item>Afghanistan</item>
<item>Akrotiri</item>
<item>Albania</item>
<item>Algeria</item>
<item>American Samoa</item>
<item>Andorra</item>
<item>Angola</item>
<item>Anguilla</item>
<item>Antarctica</item>
<item>Antigua and Barbuda</item>
<item>Argentina</item>
<item>Armenia</item>
<item>Aruba</item>
<item>Ashmore and Cartier Islands</item>
<item>Australia</item>
<item>Austria</item>
<item>Azerbaijan</item>
<item>Bahamas</item>
<item>Bahrain</item>
<item>Bangladesh</item>
<item>Barbados</item>
<item>Bassas da India</item>
<item>Belarus</item>
<item>Belgium</item>
<item>Belize</item>
<item>Benin</item>
<item>Bermuda</item>
<item>Bhutan</item>
<item>Bolivia</item>
<item>Bosnia and Herzegovina</item>
<item>Botswana</item>
<item>Bouvet Island</item>
<item>Brazil</item>
<item>British Indian Ocean Territory</item>
<item>British Virgin Islands</item>
<item>Brunei</item>
<item>Bulgaria</item>
<item>Burkina Faso</item>
<item>Burma</item>
<item>Burundi</item>
<item>Cambodia</item>
<item>Cameroon</item>
<item>Canada</item>
<item>Cape Verde</item>
<item>Cayman Islands</item>
<item>Central African Republic</item>
<item>Chad</item>
<item>Chile</item>
<item>China</item>
<item>Christmas Island</item>
<item>Clipperton Island</item>
<item>Cocos (Keeling) Islands</item>
<item>Colombia</item>
<item>Comoros</item>
<item>Congo, Democratic Republic</item>
<item>Congo, Republic</item>
<item>Cook Islands</item>
<item>Coral Sea Islands</item>
<item>Costa Rica</item>
<item>Cote d\'Ivoire</item>
<item>Croatia</item>
<item>Cuba</item>
<item>Cyprus</item>
<item>Czech Republic</item>
<item>Denmark</item>
<item>Dhekelia</item>
<item>Djibouti</item>
<item>Dominica</item>
<item>Dominican Republic</item>
<item>Ecuador</item>
<item>Egypt</item>
<item>El Salvador</item>
<item>Equatorial Guinea</item>
<item>Eritrea</item>
<item>Estonia</item>
<item>Ethiopia</item>
<item>Europa Island</item>
<item>Falkland Islands (Islas Malvinas)</item>
<item>Faroe Islands</item>
<item>Fiji</item>
<item>Finland</item>
<item>France</item>
<item>French Guiana</item>
<item>French Polynesia</item>
<item>French Southern and Antarctic Lands</item>
<item>Gabon</item>
<item>Gambia</item>
<item>Gaza Strip</item>
<item>Georgia</item>
<item>Germany</item>
<item>Ghana</item>
<item>Gibraltar</item>
<item>Glorioso Islands</item>
<item>Greece</item>
<item>Greenland</item>
<item>Grenada</item>
<item>Guadeloupe</item>
<item>Guam</item>
<item>Guatemala</item>
<item>Guernsey</item>
<item>Guinea</item>
<item>Guinea-Bissau</item>
<item>Guyana</item>
<item>Haiti</item>
<item>Heard Island and McDonald Islands</item>
<item>Holy See (Vatican City)</item>
<item>Honduras</item>
<item>Hong Kong</item>
<item>Hungary</item>
<item>Iceland</item>
<item>India</item>
<item>Indonesia</item>
<item>Iran</item>
<item>Iraq</item>
<item>Ireland</item>
<item>Isle of Man</item>
<item>Israel</item>
<item>Italy</item>
<item>Jamaica</item>
<item>Jan Mayen</item>
<item>Japan</item>
<item>Jersey</item>
<item>Jordan</item>
<item>Juan de Nova Island</item>
<item>Kazakhstan</item>
<item>Kenya</item>
<item>Kiribati</item>
<item>Korea, North</item>
<item>Korea, South</item>
<item>Kuwait</item>
<item>Kyrgyzstan</item>
<item>Laos</item>
<item>Latvia</item>
<item>Lebanon</item>
<item>Lesotho</item>
<item>Liberia</item>
<item>Libya</item>
<item>Liechtenstein</item>
<item>Lithuania</item>
<item>Luxembourg</item>
<item>Macau</item>
<item>Macedonia</item>
<item>Madagascar</item>
<item>Malawi</item>
<item>Malaysia</item>
<item>Maldives</item>
<item>Mali</item>
<item>Malta</item>
<item>Marshall Islands</item>
<item>Martinique</item>
<item>Mauritania</item>
<item>Mauritius</item>
<item>Mayotte</item>
<item>Mexico</item>
<item>Micronesia</item>
<item>Moldova</item>
<item>Monaco</item>
<item>Mongolia</item>
<item>Montserrat</item>
<item>Morocco</item>
<item>Mozambique</item>
<item>Namibia</item>
<item>Nauru</item>
<item>Navassa Island</item>
<item>Nepal</item>
<item>Netherlands</item>
<item>Netherlands Antilles</item>
<item>New Caledonia</item>
<item>New Zealand</item>
<item>Nicaragua</item>
<item>Niger</item>
<item>Nigeria</item>
<item>Niue</item>
<item>Norfolk Island</item>
<item>Northern Mariana Islands</item>
<item>Norway</item>
<item>Oman</item>
<item>Pakistan</item>
<item>Palau</item>
<item>Panama</item>
<item>Papua New Guinea</item>
<item>Paracel Islands</item>
<item>Paraguay</item>
<item>Peru</item>
<item>Philippines</item>
<item>Pitcairn Islands</item>
<item>Poland</item>
<item>Portugal</item>
<item>Puerto Rico</item>
<item>Qatar</item>
<item>Reunion</item>
<item>Romania</item>
<item>Russia</item>
<item>Rwanda</item>
<item>Saint Helena</item>
<item>Saint Kitts and Nevis</item>
<item>Saint Lucia</item>
<item>Saint Pierre and Miquelon</item>
<item>Saint Vincent and the Grenadines</item>
<item>Samoa</item>
<item>San Marino</item>
<item>Sao Tome and Principe</item>
<item>Saudi Arabia</item>
<item>Senegal</item>
<item>Serbia and Montenegro</item>
<item>Seychelles</item>
<item>Sierra Leone</item>
<item>Singapore</item>
<item>Slovakia</item>
<item>Slovenia</item>
<item>Solomon Islands</item>
<item>Somalia</item>
<item>South Africa</item>
<item>South Georgia and the South Sandwich Islands</item>
<item>Spain</item>
<item>Spratly Islands</item>
<item>Sri Lanka</item>
<item>Sudan</item>
<item>Suriname</item>
<item>Svalbard</item>
<item>Swaziland</item>
<item>Sweden</item>
<item>Switzerland</item>
<item>Syria</item>
<item>Taiwan</item>
<item>Tajikistan</item>
<item>Tanzania</item>
<item>Thailand</item>
<item>Timor-Leste</item>
<item>Togo</item>
<item>Tokelau</item>
<item>Tonga</item>
<item>Trinidad and Tobago</item>
<item>Tromelin Island</item>
<item>Tunisia</item>
<item>Turkey</item>
<item>Turkmenistan</item>
<item>Turks and Caicos Islands</item>
<item>Tuvalu</item>
<item>Uganda</item>
<item>Ukraine</item>
<item>United Arab Emirates</item>
<item>United Kingdom</item>
<item>United States</item>
<item>Uruguay</item>
<item>Uzbekistan</item>
<item>Vanuatu</item>
<item>Venezuela</item>
<item>Vietnam</item>
<item>Virgin Islands</item>
<item>Wake Island</item>
<item>Wallis and Futuna</item>
<item>Western Sahara</item>
<item>Yemen</item>
<item>Zambia</item>
<item>Zimbabwe</item>
<item>Other</item>  
</string-array>
	<string name="Favorites">Favorites</string>
	<string name="Search">Search</string>
	<string name="Menu">Menu</string>
	<string name="All">All</string>
	<string name="New">New</string>
	<string name="Suggestions">Suggestions</string>
	<string name="msg_error_vote">Sorry, you cannot rank this company twice during the same day</string>
	<string name="like">You like it !</string>
	<string name="like2">He/She likes the company</string>
	<string name="home_grid_service">a service</string>
	<string name="home_grid_product">a product</string>
	<string name="home_grid_the_best">the best</string>
	<string name="home_grid_invite">Join</string>
	<string name="home_grid_co_ranker">the Community</string>
</resources>