<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#73c2fb">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"

                android:background="#ffffff"
                android:id="@+id/relative_layout1">

                <TextView
                    android:text="00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/badge_notification1"
                    android:textColor="#FF405E"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button1"
                    android:id="@+id/textView13"
                    android:textStyle="normal|bold"
                    android:textColor="#000000"
                      />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button1"
                    android:layout_alignBottom="@+id/button1"
                    android:id="@+id/textView15"
                    android:textStyle="normal|bold"
                    android:textColor="#000000" />

                <TextView
                    android:text="@string/home_grid_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColor="#73C2FB"
                    android:textSize="24sp"
                    android:layout_marginTop="21dp"
                    android:layout_below="@+id/button1"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/services"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="Rank "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textColor="#73c2FB"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:layout_above="@+id/textView13"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"
                android:background="#ffffff"
                android:id="@+id/relative_layout2">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/products"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/home_grid_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView25"
                    android:textColor="#73C2FB"
                    android:textSize="24sp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/button2"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/badge_notification2"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FF405E"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="20sp" />


                <TextView
                    android:text="Rank "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textColor="#73c2FB"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="17dp"
                    android:layout_above="@+id/button2"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"
                android:background="#ffffff"
                android:id="@+id/relative_layout3">

                <TextView
                    android:text="00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/badge_notification3"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FF405E"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thebest"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="Pick "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textColor="#73c2FB"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:layout_below="@+id/badge_notification3"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/home_grid_the_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView27"
                    android:textColor="#73C2FB"
                    android:textSize="24sp"
                    android:layout_marginTop="18dp"
                    android:layout_below="@+id/button3"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"
                android:background="#ffffff"
                android:id="@+id/relative_layout4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/textView6"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:textColor="#000000"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/badge_notification4"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FF405E"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="20sp" />

                <TextView
                    android:text="@string/home_grid_co_ranker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView26"
                    android:textColor="#73C2FB"
                    android:textSize="19sp"
                    android:layout_below="@+id/button4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="19dp" />

                <TextView
                    android:text="@string/home_grid_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textColor="#73c2FB"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:layout_below="@+id/badge_notification4"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/community"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>


        </TableRow>

    </TableLayout>

</LinearLayout>